WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
85927
[chromium] Reflections with masks should not occlude
https://bugs.webkit.org/show_bug.cgi?id=85927
Summary
[chromium] Reflections with masks should not occlude
Dana Jansens
Reported
2012-05-08 15:54:28 PDT
[chromium] Reflections with masks should not occlude
Attachments
Patch
(10.87 KB, patch)
2012-05-08 15:59 PDT
,
Dana Jansens
no flags
Details
Formatted Diff
Diff
Patch for landing
(11.00 KB, patch)
2012-05-08 16:39 PDT
,
Dana Jansens
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Dana Jansens
Comment 1
2012-05-08 15:56:23 PDT
http://code.google.com/p/chromium/issues/detail?id=125262
Dana Jansens
Comment 2
2012-05-08 15:59:02 PDT
Created
attachment 140804
[details]
Patch
James Robinson
Comment 3
2012-05-08 16:24:16 PDT
Comment on
attachment 140804
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=140804&action=review
> Source/WebCore/ChangeLog:16 > + allow us to remove a F*XME from CCOT::finishedTargetRenderSurface().
F*XME? could you expand out CCOT here, please? it's not necessarily obvious to a reader how this acronym should expand. you can also put this comment in the per-file or per-function information below so the context is obvious
Dana Jansens
Comment 4
2012-05-08 16:37:45 PDT
(In reply to
comment #3
)
> (From update of
attachment 140804
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=140804&action=review
> > > Source/WebCore/ChangeLog:16 > > + allow us to remove a F*XME from CCOT::finishedTargetRenderSurface(). > > F*XME? > > could you expand out CCOT here, please? it's not necessarily obvious to a reader how this acronym should expand. you can also put this comment in the per-file or per-function information below so the context is obvious
Oops, yes, too much coffee. Thanks.
Dana Jansens
Comment 5
2012-05-08 16:39:36 PDT
Created
attachment 140813
[details]
Patch for landing
WebKit Review Bot
Comment 6
2012-05-08 17:54:02 PDT
Comment on
attachment 140813
[details]
Patch for landing Clearing flags on attachment: 140813 Committed
r116472
: <
http://trac.webkit.org/changeset/116472
>
WebKit Review Bot
Comment 7
2012-05-08 17:54:06 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug