Source/WebCore/platform/graphics/chromium/RenderSurfaceChromium.cpp
@@ -69,5 +69,15 @@ bool RenderSurfaceChromium::hasReplica() const
     return m_owningLayer->replicaLayer();
 }
 
+bool RenderSurfaceChromium::hasMask() const
+{
+    return m_maskLayer;
+}
+
+bool RenderSurfaceChromium::replicaHasMask() const
+{
+    return hasReplica() && (m_maskLayer || m_owningLayer->replicaLayer()->maskLayer());
+}
+
 }
 #endif // USE(ACCELERATED_COMPOSITING)
